added a max width to text editing area

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -47,7 +47,7 @@
 
 <body>
   <div id='userlist'></div>
-  <div id='firepad'></div>
+  <div id='firepad' style="max-width: 1000px"></div>
 
   <div id='colorpicker'></div>
 
