attempts to swap firepad.js with firepadfullPerLine.js

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -13,8 +13,10 @@
   <link rel='stylesheet' href='./node_modules/codemirror/lib/codemirror.css' />
 
   <!-- Firepad -->
-  <link rel='stylesheet' href='https://firepad.io/releases/v1.5.10/firepad.css' />
-  <script src='https://firepad.io/releases/v1.5.10/firepad.js'></script>
+  <!-- <link rel='stylesheet' href='https://firepad.io/releases/v1.5.10/firepad.css' />
+  <script src='https://firepad.io/releases/v1.5.10/firepad.js'></script> -->
+  <link rel='stylesheet' href='lib/firepad.css' />
+  <script src='lib/firepadfullperLine.js'></script>
 
   <!-- Firepad Userlist -->
   <script src='./scripts/firepad-userlist.js'></script>
