adds comment for firepad visualization

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -15,6 +15,8 @@
   <!-- Firepad -->
   <!-- <link rel='stylesheet' href='https://firepad.io/releases/v1.5.10/firepad.css' />
   <script src='https://firepad.io/releases/v1.5.10/firepad.js'></script> -->
+
+  <!-- Firepad (for visualizations) -->
   <link rel='stylesheet' href='lib/firepad.css' />
   <script src='lib/firepadfullperLine.js'></script>
 
