comments out logData

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -18,7 +18,7 @@
 
   <!-- Firepad (for visualizations) -->
   <link rel='stylesheet' href='lib/firepad.css' />
-  <script src='lib/firepadfullperLine.js'></script>
+  <script src='lib/firepad-full-custom-vis.js'></script>
 
   <!-- Firepad Userlist -->
   <script src='./scripts/firepad-userlist.js'></script>
