--- a/eyewrite.html
+++ b/eyewrite.html
@@ -13,12 +13,12 @@
   <link rel='stylesheet' href='./node_modules/codemirror/lib/codemirror.css' />
 
   <!-- Firepad -->
-  <!-- <link rel='stylesheet' href='https://firepad.io/releases/v1.5.10/firepad.css' />
-  <script src='https://firepad.io/releases/v1.5.10/firepad.js'></script> -->
+  <link rel='stylesheet' href='https://firepad.io/releases/v1.5.10/firepad.css' />
+  <script src='https://firepad.io/releases/v1.5.10/firepad.js'></script>
 
   <!-- Firepad (for visualizations) -->
-  <link rel='stylesheet' href='lib/firepad.css' />
-  <script src='lib/firepad-full-custom-vis.js'></script>
+  <!-- <link rel='stylesheet' href='lib/firepad.css' />
+  <script src='lib/firepad-full-custom-vis.js'></script> -->
 
   <!-- Firepad Userlist -->
   <script src='./scripts/firepad-userlist.js'></script>
