--- a/eyewrite.html
+++ b/eyewrite.html
@@ -181,25 +181,25 @@
   <div id="audio-streams"></div>
 
   <script>
-    // var firebaseConfig = {
-    //   apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
-    //   authDomain: "eyewrite-62d75.firebaseapp.com",
-    //   databaseURL: "https://eyewrite-62d75.firebaseio.com",
-    //   projectId: "eyewrite-62d75",
-    //   storageBucket: "eyewrite-62d75.appspot.com",
-    //   messagingSenderId: "998123311342",
-    //   appId: "1:998123311342:web:abed435afee503a2eb63ff",
-    //   measurementId: "G-8EGTMW2Q4G"
-    // };
     var firebaseConfig = {
-      apiKey: "AIzaSyB2cQN9gOLWPAfShtqB1oecNrXy2e8ThZs",
-      authDomain: "ewri-a5f65.firebaseapp.com",
-      databaseURL: "https://ewri-a5f65-default-rtdb.firebaseio.com",
-      projectId: "ewri-a5f65",
-      storageBucket: "ewri-a5f65.appspot.com",
-      messagingSenderId: "946530877533",
-      appId: "1:946530877533:web:1e585c0d350f695dfd0db4"
+      apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
+      authDomain: "eyewrite-62d75.firebaseapp.com",
+      databaseURL: "https://eyewrite-62d75.firebaseio.com",
+      projectId: "eyewrite-62d75",
+      storageBucket: "eyewrite-62d75.appspot.com",
+      messagingSenderId: "998123311342",
+      appId: "1:998123311342:web:abed435afee503a2eb63ff",
+      measurementId: "G-8EGTMW2Q4G"
     };
+    // var firebaseConfig = {
+    //   apiKey: "AIzaSyB2cQN9gOLWPAfShtqB1oecNrXy2e8ThZs",
+    //   authDomain: "ewri-a5f65.firebaseapp.com",
+    //   databaseURL: "https://ewri-a5f65-default-rtdb.firebaseio.com",
+    //   projectId: "ewri-a5f65",
+    //   storageBucket: "ewri-a5f65.appspot.com",
+    //   messagingSenderId: "946530877533",
+    //   appId: "1:946530877533:web:1e585c0d350f695dfd0db4"
+    // };
 
 
     // Initialize Firebase
