--- a/eyewrite-2020-04-26.html
+++ b/eyewrite-2020-04-26.html
@@ -31,16 +31,9 @@
   <script src="./node_modules/peerjs/dist/peerjs.js"></script>
 
   <!-- Include Twitter Bootstrap and jQuery: -->
-  <!-- <link rel='stylesheet' href='./node_modules/bootstrap-multiselect/docs/css/bootstrap-3.3.2.min.css' type='text/css' /> -->
-  <!-- <script type='text/javascript' src='./node_modules/bootstrap-multiselect/docs/js/jquery-2.1.3.min.js'></script> -->
-  <!-- <script type='text/javascript' src='./node_modules/bootstrap-multiselect/docs/js/bootstrap-3.3.2.min.js'></script> -->
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-    crossorigin="anonymous"></script>
+  <link rel='stylesheet' href='./node_modules/bootstrap-multiselect/docs/css/bootstrap-3.3.2.min.css' type='text/css' />
+  <script type='text/javascript' src='./node_modules/bootstrap-multiselect/docs/js/jquery-2.1.3.min.js'></script>
+  <script type='text/javascript' src='./node_modules/bootstrap-multiselect/docs/js/bootstrap-3.3.2.min.js'></script>
 
   <!-- Include the plugin's CSS and JS: -->
   <script type='text/javascript' src='./node_modules/bootstrap-multiselect/dist/js/bootstrap-multiselect.js'></script>
@@ -188,26 +181,25 @@
   <div id="audio-streams"></div>
 
   <script>
-    // var firebaseConfig = {
-    //   apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
-    //   authDomain: "eyewrite-62d75.firebaseapp.com",
-    //   databaseURL: "https://eyewrite-62d75.firebaseio.com",
-    //   projectId: "eyewrite-62d75",
-    //   storageBucket: "eyewrite-62d75.appspot.com",
-    //   messagingSenderId: "998123311342",
-    //   appId: "1:998123311342:web:abed435afee503a2eb63ff",
-    //   measurementId: "G-8EGTMW2Q4G"
-    // };
-
     var firebaseConfig = {
-      apiKey: "AIzaSyAkIIeqpNNzGp98UHRI21GOvp6CmH_hdZU",
-      authDomain: "eyewrite2-642f5.firebaseapp.com",
-      databaseURL: "https://eyewrite2-642f5-default-rtdb.firebaseio.com",
-      projectId: "eyewrite2-642f5",
-      storageBucket: "eyewrite2-642f5.appspot.com",
-      messagingSenderId: "360420484918",
-      appId: "1:360420484918:web:df36b1d345145448f7b597"
+      apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
+      authDomain: "eyewrite-62d75.firebaseapp.com",
+      databaseURL: "https://eyewrite-62d75.firebaseio.com",
+      projectId: "eyewrite-62d75",
+      storageBucket: "eyewrite-62d75.appspot.com",
+      messagingSenderId: "998123311342",
+      appId: "1:998123311342:web:abed435afee503a2eb63ff",
+      measurementId: "G-8EGTMW2Q4G"
     };
+    // var firebaseConfig = {
+    //   apiKey: "AIzaSyB2cQN9gOLWPAfShtqB1oecNrXy2e8ThZs",
+    //   authDomain: "ewri-a5f65.firebaseapp.com",
+    //   databaseURL: "https://ewri-a5f65-default-rtdb.firebaseio.com",
+    //   projectId: "ewri-a5f65",
+    //   storageBucket: "ewri-a5f65.appspot.com",
+    //   messagingSenderId: "946530877533",
+    //   appId: "1:946530877533:web:1e585c0d350f695dfd0db4"
+    // };
 
 
     // Initialize Firebase
