--- a/eyewrite.html
+++ b/eyewrite.html
@@ -74,9 +74,7 @@
       <p>Visualize Data:</p>
 
       <div class="inline-toggle-container">
-        <p class="inline">Gaze</p>
-        <!-- <input type="radio" id="sendButton" name="dataChoice" checked>
-        <label for="sendButton" id="sendButtonLabel" type="radio">Send</label> -->
+        <p style="margin-bottom: 0;">Gaze</p>
         <div class="onoffswitch">
           <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="gazeVisSwitch" tabindex="0">
           <label class="onoffswitch-label" for="gazeVisSwitch">
@@ -89,8 +87,6 @@
 
       <div class="inline-toggle-container">
         <p>Mouse</p>
-        <!-- <input type="radio" id="blockButton" name="dataChoice">
-        <label for="blockButton" type="radio">Block</label> -->
         <div>
           <div class="onoffswitch">
             <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="mouseVisSwitch" tabindex="0">
@@ -183,17 +179,24 @@
           <p>voice chat</p>
           <button>on</button>
         </div> -->
-        <div class="inline-toggle-container">
-          <div class="onoffswitch">
-            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="voiceChatSwitch" tabindex="0">
-            <label class="onoffswitch-label" for="voiceChatSwitch">
-              <span class="onoffswitch-inner"></span>
-              <span class="onoffswitch-switch"></span>
-            </label>
-          </div>
+        <div>
+          <div class="inline-toggle-container">
+            <div>
+              <div class="onoffswitch">
+                <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="voiceChatSwitch"
+                  tabindex="0">
+                <label class="onoffswitch-label" for="voiceChatSwitch">
+                  <span class="onoffswitch-inner"></span>
+                  <span class="onoffswitch-switch"></span>
+                </label>
+              </div>
+            </div>
 
-          <button id="mute" disabled=True>Mute</button>
+
+            <button id="mute" disabled=True>Mute</button>
+          </div>
         </div>
+
       </div>
     </div>
 
