chore: rename highlight shape to highlight pattern, circle to solid, and places send my data before visualize data

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -142,7 +142,7 @@
       <p>Highlight Pattern</p>
       <div style="margin: auto;">
         <select id="vis-shape" style="width: 120px; margin: 0 auto; margin-bottom: 10px; margin-top: 0px;">
-          <option value="circle">Solid</option>
+          <option value="solid">Solid</option>
           <option value="gradient">Gradient</option>
         </select>
       </div>
