feat: add color selection algorithm

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -56,6 +56,9 @@
   <!-- Modern or es5 bundle -->
   <script src='https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js'></script>
 
+  <!-- Chroma JS -->
+  <script type="text/javascript" src="./node_modules/chroma-js/chroma.js"></script>
+
   <link rel='stylesheet' href='./css/eyewrite.css' />
 </head>
 
@@ -211,6 +214,8 @@
   <div id="audio-streams"></div>
 
   <script>
+    window.debug = true;  // turn off to remove debug statements
+
     // var firebaseConfig = {
     //   apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
     //   authDomain: "eyewrite-62d75.firebaseapp.com",
@@ -221,6 +226,7 @@
     //   appId: "1:998123311342:web:abed435afee503a2eb63ff",
     //   measurementId: "G-8EGTMW2Q4G"
     // };
+
 
     var firebaseConfig = {
       apiKey: "AIzaSyAkIIeqpNNzGp98UHRI21GOvp6CmH_hdZU",
@@ -252,6 +258,31 @@
     var firepad = Firepad.fromCodeMirror(firebaseRef, codeMirror,
       { richTextToolbar: true, richTextShortcuts: true, userId: userId });
 
+    ///// top-level code to manipulate user colors
+
+    firebaseRef.child('users').once("value", function (data) {
+      // do some stuff once
+      var existingColors = []
+      if (data.key != userId) {
+        for (let [uID, val] of Object.entries(data.val())) {
+          if (uID != userId) {
+            existingColors.push(chroma(val['color']).hcl());
+            // if (window.debug) console.log(chroma(val['color']).hcl());
+          }
+        };
+      }
+      if (existingColors.length > 0) {
+        firepad.firebaseAdapter_.setColor('#ffffff');
+      }
+      console.log(existingColors, 'Now generate a new color for current user!');
+
+      var newUserColor = select_new_color(existingColors, firepad.firebaseAdapter_.color_);
+      console.log(newUserColor, chroma(newUserColor).hcl());
+      firepad.firebaseAdapter_.setColor(newUserColor);
+
+    });
+
+
     //// Create FirepadUserList (with our desired userId).
     var firepadUserList = FirepadUserList.fromDiv(firebaseRef.child('users'),
       document.getElementById('userlist'), userId);
@@ -270,14 +301,67 @@
     }
 
 
+    function select_new_color(existingColors, currentColor) {
+      var numColors = existingColors.length;
+      if (numColors == 0) {
+        return currentColor;
+      }
+
+      existingColors.sort(function (a, b) {
+        if (a[0] == b[0]) {
+          return 0;
+        } else {
+          return a[0] < b[0] ? -1 : 1;
+        }
+      });
+
+      // console.log(existingColors);
+
+      var l = Math.max(Math.min(Math.random() * 100.0, 90.0), 30.0);
+      var c = Math.max(Math.min(Math.random() * 100.0, 75.0), 25.0);
+
+      var hue_min = 0;
+      var hue_max = 0;
+
+      for (var i = 1; i < numColors; i++) {
+        var prev_hue = existingColors[i - 1][0];
+        var curr_hue = existingColors[i][0];
+
+        if (curr_hue - prev_hue > hue_max - hue_min) {
+          hue_min = prev_hue;
+          hue_max = curr_hue;
+        }
+        console.log(hue_min, hue_max);
+      }
+
+      var lst_hue = existingColors[numColors - 1][0];
+      var fst_hue = existingColors[0][0] + 360;
+
+      if (fst_hue - lst_hue > hue_max - hue_min) {
+        hue_min = lst_hue;
+        hue_max = fst_hue;
+      }
+
+      var h = (hue_min + (hue_max - hue_min) / 2) % 360;
+      var newColor = chroma(h, c, l, 'hcl').hex();
+
+      return newColor;
+    }
+
+
+    // console.log(existingColors);
+
+
   </script>
 </body>
 
 <!-- UI Adjustments Script -->
-
-<script src='./scripts/UIAdjustments.js'></script>
+<script src='./scripts/ui-adjustments.js'></script>
 
 <!-- Visualization Script -->
 <script src='./scripts/visualization.js'></script>
+
+<!-- Voice Chat Script -->
+<script src="./scripts/voice-chat.js"></script>
 
 </html>
