fix: gaze vis sync issue

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -214,7 +214,7 @@
   <div id="audio-streams"></div>
 
   <script>
-    window.debug = true;  // turn off to remove debug statements
+    window.debug = false;  // turn off to remove debug statements
 
     // var firebaseConfig = {
     //   apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
