--- a/eyewrite.html
+++ b/eyewrite.html
@@ -30,10 +30,7 @@
   <!-- Peer.JS -->
   <script src="./node_modules/peerjs/dist/peerjs.js"></script>
 
-  <!-- Include Twitter Bootstrap and jQuery: -->
-  <!-- <link rel='stylesheet' href='./node_modules/bootstrap-multiselect/docs/css/bootstrap-3.3.2.min.css' type='text/css' /> -->
-  <!-- <script type='text/javascript' src='./node_modules/bootstrap-multiselect/docs/js/jquery-2.1.3.min.js'></script> -->
-  <!-- <script type='text/javascript' src='./node_modules/bootstrap-multiselect/docs/js/bootstrap-3.3.2.min.js'></script> -->
+
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -78,8 +75,6 @@
 
       <div class="inline-toggle-container">
         <p class="inline">Gaze</p>
-        <!-- <input type="radio" id="sendButton" name="dataChoice" checked>
-        <label for="sendButton" id="sendButtonLabel" type="radio">Send</label> -->
         <div class="onoffswitch">
           <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="gazeSendSwitch" tabindex="0">
           <label class="onoffswitch-label" for="gazeSendSwitch">
@@ -156,34 +151,12 @@
       <input type="range" min="1" max="48" value="12" id="sentenceSlider">
     </div>
 
-
-    <!-- 
-    <div class="radio-buttons">
-      <p>Visualize:</p>
-      <input type="radio" id="gazeButton" name="visualizeChoice">
-      <label for="gazeButton" type="radio">Gaze</label>
-
-      <input type="radio" id="mouseButton" name="visualizeChoice" checked>
-      <label for="mouseButton" type="radio">Mouse</label>
-    </div> -->
-
-
     <div>
       <div class="radio-buttons">
         <div>
           <p>Voice Chat</p>
         </div>
 
-        <!-- <input type="radio" id="voiceOnButton" name="voiceChoice">
-        <label for="voiceOnButton" type="radio">On</label>
-  
-        <input type="radio" id="voiceOffButton" name="voiceChoice" checked>
-        <label for="voiceOffButton" type="radio">Off</label>
-
-        <div id="toggle-wrapper">
-          <p>voice chat</p>
-          <button>on</button>
-        </div> -->
         <div>
           <div class="inline-toggle-container">
             <div>
@@ -196,7 +169,6 @@
                 </label>
               </div>
             </div>
-
 
             <button id="mute" disabled=True>Mute</button>
           </div>
@@ -258,31 +230,6 @@
     var firepad = Firepad.fromCodeMirror(firebaseRef, codeMirror,
       { richTextToolbar: true, richTextShortcuts: true, userId: userId });
 
-    ///// top-level code to manipulate user colors
-
-    firebaseRef.child('users').once("value", function (data) {
-      // do some stuff once
-      var existingColors = []
-      if (data.key != userId) {
-        for (let [uID, val] of Object.entries(data.val())) {
-          if (uID != userId) {
-            existingColors.push(chroma(val['color']).hcl());
-            // if (window.debug) console.log(chroma(val['color']).hcl());
-          }
-        };
-      }
-      if (existingColors.length > 0) {
-        firepad.firebaseAdapter_.setColor('#ffffff');
-      }
-      console.log(existingColors, 'Now generate a new color for current user!');
-
-      var newUserColor = select_new_color(existingColors, firepad.firebaseAdapter_.color_);
-      console.log(newUserColor, chroma(newUserColor).hcl());
-      firepad.firebaseAdapter_.setColor(newUserColor);
-
-    });
-
-
     //// Create FirepadUserList (with our desired userId).
     var firepadUserList = FirepadUserList.fromDiv(firebaseRef.child('users'),
       document.getElementById('userlist'), userId);
@@ -300,68 +247,13 @@
       return ref;
     }
 
-
-    function select_new_color(existingColors, currentColor) {
-      var numColors = existingColors.length;
-      if (numColors == 0) {
-        return currentColor;
-      }
-
-      existingColors.sort(function (a, b) {
-        if (a[0] == b[0]) {
-          return 0;
-        } else {
-          return a[0] < b[0] ? -1 : 1;
-        }
-      });
-
-      // console.log(existingColors);
-
-      var l = Math.max(Math.min(Math.random() * 100.0, 90.0), 30.0);
-      var c = Math.max(Math.min(Math.random() * 100.0, 75.0), 25.0);
-
-      var hue_min = 0;
-      var hue_max = 0;
-
-      for (var i = 1; i < numColors; i++) {
-        var prev_hue = existingColors[i - 1][0];
-        var curr_hue = existingColors[i][0];
-
-        if (curr_hue - prev_hue > hue_max - hue_min) {
-          hue_min = prev_hue;
-          hue_max = curr_hue;
-        }
-        console.log(hue_min, hue_max);
-      }
-
-      var lst_hue = existingColors[numColors - 1][0];
-      var fst_hue = existingColors[0][0] + 360;
-
-      if (fst_hue - lst_hue > hue_max - hue_min) {
-        hue_min = lst_hue;
-        hue_max = fst_hue;
-      }
-
-      var h = (hue_min + (hue_max - hue_min) / 2) % 360;
-      var newColor = chroma(h, c, l, 'hcl').hex();
-
-      return newColor;
-    }
-
-
-    // console.log(existingColors);
-
-
   </script>
 </body>
 
-<!-- UI Adjustments Script -->
-<script src='./scripts/ui-adjustments.js'></script>
-
-<!-- Visualization Script -->
-<script src='./scripts/visualization.js'></script>
-
-<!-- Voice Chat Script -->
-<script src="./scripts/voice-chat.js"></script>
+<!-- Additional Scripts -->
+<script src='./scripts/ui-adjustments.js'></script> // UI Adjustments
+<script src="./scripts/highlight-style.js"></script> // Highlight Style
+<script src='./scripts/visualization.js'></script> // Visualization
+<script src="./scripts/voice-chat.js"></script> // Voice Chat
 
 </html>
