refactor: move comments

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -252,10 +252,13 @@
   </script>
 </body>
 
-<!-- Additional Scripts -->
-<script src='./scripts/ui-adjustments.js'></script> <!-- UI Adjustments -->
-<script src="./scripts/highlight-style.js"></script> <!-- Highlight Style -->
-<script src='./scripts/visualization-control.js'></script> <!-- Visualization Control -->
-<script src="./scripts/voice-chat.js"></script> <!-- Voice Chat -->
+<!-- UI Adjustments -->
+<script src='./scripts/ui-adjustments.js'></script>
+<!-- Highlight Style -->
+<script src="./scripts/highlight-style.js"></script>
+<!-- Visualization Control -->
+<script src='./scripts/visualization-control.js'></script>
+<!-- Voice Chat -->
+<script src="./scripts/voice-chat.js"></script>
 
 </html>
