feat: browser-sync, add WebGazer as submodule, switch calibration page

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -25,7 +25,7 @@
   <link rel='stylesheet' href='./css/firepad-userlist.css' />
 
   <!-- WebGazer -->
-  <script type='text/javascript' src='./WebGazer/www/webgazer.js'></script>
+  <script type='text/javascript' src='./WebGazer/www/simple-wg/webgazer.js'></script>
 
   <!-- Peer.JS -->
   <script src="./node_modules/peerjs/dist/peerjs.js"></script>
@@ -180,7 +180,7 @@
     </div>
 
     <!-- WebGazer Calibration Component -->
-    <A href="./WebGazer/www/calibration.html" id="calibrationLink">
+    <A href="./WebGazer/www/simple-wg/index.html" id="calibrationLink">
       <input type="button" id="calibrationButton" value="Calibrate Gaze">
     </A>
 
