webgazer commit attempt

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -25,7 +25,9 @@
   <link rel='stylesheet' href='./css/firepad-userlist.css' />
 
   <!-- WebGazer -->
-  <script type='text/javascript' src='./WebGazer/www/simple-wg/webgazer.js'></script>
+  <!-- <script type='text/javascript' src='./WebGazer/www/simple-wg/webgazer.js'></script> -->
+  <script type='text/javascript' src='./WebGazer/simple-wg/webgazer.js'></script>
+
 
   <!-- Peer.JS -->
   <script src="./node_modules/peerjs/dist/peerjs.js"></script>
@@ -180,9 +182,14 @@
     </div>
 
     <!-- WebGazer Calibration Component -->
-    <A href="./WebGazer/www/simple-wg/index.html" id="calibrationLink">
+    <!-- <A href="./WebGazer/www/simple-wg/index.html" id="calibrationLink">
+      <input type="button" id="calibrationButton" value="Calibrate Gaze">
+    </A> -->
+
+    <A href="./WebGazer/simple-wg/index.html" id="calibrationLink">
       <input type="button" id="calibrationButton" value="Calibrate Gaze">
     </A>
+    
 
   </div>
   <div id="audio-streams"></div>
