updated ToGo doc

--- a/WebGazer/simple-wg/index.html
+++ b/WebGazer/simple-wg/index.html
@@ -25,8 +25,8 @@
           <a class="right" onclick="var ts = new Targets(calibrationPoints, 'calibration', 5); ts.start()" href="#">Calibrate</a>
           <!-- </br>
           <a class="right" onclick="webgazer.trainModel()" href="#">Train Model</a> -->
-          </br>
-          <a class="right" href="control.html">To Control</a> -->
+          <!-- </br>
+          <a class="right" href="control.html">To Control</a> --> -->
         </br>
         <a class='right' href="#" onclick="history.go(-2)">Back (After Calibrating)</a>
           </br>
