fixed merge conflicts

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -85,7 +85,6 @@
     ></script>
 
     <link rel="stylesheet" href="./css/eyewrite.css" />
-
     <!-- Firechat -->
     <link
       rel="stylesheet"
@@ -95,8 +94,8 @@
 
     <!-- Custom CSS -->
     <style>
-      #firechat-wrapper {
-        /* height: 475px;
+      /* #firechat-wrapper {
+        height: 475px;
         width: 325px;
         padding: 10px;
         border: 1px solid #ccc;
@@ -112,12 +111,12 @@
         z-index: 11;
         position: absolute;
         left: 1575px;
-        top: 425px; */
-      }
+        top: 425px;
+      } */
     </style>
   </head>
 
-  <body onload="updateGRatio()">
+  <body onload="updateUI()">
     <div id="userlist"></div>
     <div id="firepad"></div>
 
@@ -244,9 +243,9 @@
       <!-- Highlight Gradient Ratio Component -->
       <div id="slider-container">
         <p class="slider-text2">
-          Gradient Ratio: <span id="numSentences2">100%</span>
+          Gradient Ratio: <span id="numSentences2"></span>
         </p>
-        <input type="range" min="0" max="66" value="100" id="sentenceSlider2" />
+        <input type="range" min="0" max="66" value="66" id="sentenceSlider2" />
       </div>
 
       <!-- Voice Chat Component -->
@@ -366,11 +365,6 @@
         return ref;
       }
 
-      function updateGRatio() {
-        var val = document.getElementById("numSentences2");
-        val.innerHTML = "100%";
-      }
-
       // Get a reference to the Firebase Realtime Database
       var chatRef = firebase.database().ref("chat");
       // Create an instance of Firechat
@@ -378,6 +372,18 @@
         chatRef,
         document.getElementById("firechat-wrapper")
       );
+
+      function updateUI() {
+        //Update Gradient Ratio label to match slider value
+        var grad = document.getElementById("numSentences2");
+        var gradval = document.getElementById("sentenceSlider2");
+        grad.innerHTML = Math.floor((gradval.value / 66) * 100) + "%";
+        //turn all switches off when page is loaded (class is onoffswitch-label)
+        document.getElementById("gazeSendSwitch").checked = false;
+        document.getElementById("mouseSendSwitch").checked = false;
+        document.getElementById("mouseVisSwitch").checked = false;
+        document.getElementById("gazeVisSwitch").checked = false;
+      }
     </script>
   </body>
 
