test error debugging

--- a/WebGazer/simple-wg/index.html
+++ b/WebGazer/simple-wg/index.html
@@ -10,6 +10,11 @@
 
         <!-- This can be subbed for any version of webgazer -->
         <script async type="text/javascript" src="./webgazer.js"></script>
+
+        <script src="./js/precision_calculation.js"></script>
+        <script src="./js/precision_store_points.js"></script>
+
+
         <STYLE type="text/css">
             .right { float: right; }
         </STYLE>
